// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change its style on outline 1`] = `
<a
  className="sc-bwzfXH buCeHw"
  disabled={false}
  href="#"
  onClick={null}
>
  default
</a>
`;

exports[`should change its style on success 1`] = `
<a
  className="sc-bwzfXH eGVawg"
  disabled={false}
  href="#"
  onClick={null}
>
  default
</a>
`;

exports[`should change its style on warn 1`] = `
<a
  className="sc-bwzfXH ljeNxs"
  disabled={false}
  href="#"
  onClick={null}
>
  default
</a>
`;

exports[`should render a anchor 1`] = `
<a
  className="sc-bwzfXH ecSw"
  disabled={false}
  href="#"
  onClick={null}
>
  default
</a>
`;

exports[`should render a button 1`] = `
<button
  className="sc-bdVaJa bMyNl"
  disabled={false}
  href={null}
  onClick={[Function]}
>
  default
</button>
`;
